--- a/.config
+++ b/.config
@@ -524,8 +524,8 @@ CONFIG_AUTOREBUILD=y
 # CONFIG_OPTIMIZE_HOST_TOOLS is not set
 CONFIG_BUILD_SUFFIX=""
 CONFIG_TARGET_ROOTFS_DIR=""
-CONFIG_CCACHE=y
-CONFIG_CCACHE_DIR="/home/yyk/.ccache"
+# CONFIG_CCACHE is not set
+# CONFIG_CCACHE_DIR is not set
 CONFIG_KERNEL_CFLAGS=""
 CONFIG_EXTERNAL_KERNEL_TREE=""
 CONFIG_KERNEL_GIT_CLONE_URI=""
