--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -59,7 +59,7 @@ jobs:
       run: |
         df -hT $PWD
         echo current directory: $pwd
-        git clone $REPO_URL -b $REPO_BRANCH openwrt
+        if [ -d openwrt ]; then git checkout -f $REPO_BRANCH; else git clone $REPO_URL -b $REPO_BRANCH openwrt fi
         ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
 
     - name: Load custom feeds
