--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -58,8 +58,8 @@ jobs:
       working-directory: /workdir
       run: |
         df -hT $PWD
-        echo "current directory: $pwd"
-        if [ -d openwrt ]; then cd openwrt && git checkout -f $REPO_BRANCH; else git clone $REPO_URL -b $REPO_BRANCH openwrt fi
+        echo "current directory: $(pwd)"
+        if [ -d openwrt ]; then cd openwrt && git checkout -f "$REPO_BRANCH"; else git clone "$REPO_URL" -b "$REPO_BRANCH" openwrt; fi
         ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
 
     - name: Load custom feeds
