--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -32,8 +32,10 @@ env:
 
 jobs:
   build:
-    runs-on: [self-hosted, ubuntu-22.04]
-
+    runs-on: ubuntu-22.04
+    timeout-minutes: 300
+    strategy:
+      fail-fast: false
     steps:
     - name: Checkout
       uses: actions/checkout@main
