--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -33,6 +33,7 @@ env:
 jobs:
   test_self_hosted:
     runs-on: self-hosted
+    timeout-minutes: 3
     continue-on-error: true  # 允许失败
     outputs:
       use_self_hosted: ${{ steps.check_runner.outputs.use_self_hosted }}
@@ -40,7 +41,7 @@ jobs:
       - name: Check if self-hosted works
         id: test_runner
         run: |
-          ping -c 1 github.com || exit 1
+          echo "Hi" || exit 1
       - name: Set output if successful
         id: check_runner
         if: steps.test_runner.outcome == 'success'
@@ -54,7 +55,7 @@ jobs:
       - name: Select Runner
         id: select_runner
         run: |
-          if [[ ${{ needs.test_self_hosted.outputs.use_self_hosted }} == 'true' ]]; then echo "runner=[self-hosted]" >> $GITHUB_OUTPUT; else echo "ubuntu-22.04" >> $GITHUB_OUTPUT; fi
+          if [[ "${{ needs.test_self_hosted.outputs.use_self_hosted }}" == 'true' ]]; then echo "runner=[self-hosted]" >> $GITHUB_OUTPUT; else echo "ubuntu-22.04" >> $GITHUB_OUTPUT; fi
   build:
     needs: select-runner
     name: Build OpenWRT on ${{ needs.select-runner.outputs.runner }}
