--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -55,10 +55,10 @@ jobs:
       - name: Select Runner
         id: select_runner
         run: |
-          if [[ "${{ needs.test_self_hosted.outputs.use_self_hosted }}" == 'true' ]]; then echo "runner=[self-hosted]" >> $GITHUB_OUTPUT; else echo "ubuntu-22.04" >> $GITHUB_OUTPUT; fi
+          if [[ "${{ needs.test_self_hosted.outputs.use_self_hosted }}" == 'true' ]]; then echo "runner=self-hosted" >> $GITHUB_OUTPUT; else echo "ubuntu-22.04" >> $GITHUB_OUTPUT; fi
   build:
     needs: select-runner
-    name: Build OpenWRT on ${{ needs.select-runner.outputs.runner }}
+    name: Build OpenWRT on "${{ needs.select-runner.outputs.runner }}"
     runs-on: ${{ needs.select-runner.outputs.runner }}
     strategy:
       fail-fast: false
