--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -41,7 +41,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        response=$(curl -s -H "Authorization: token $GITHUB_TOKEN" \
+        response=$(curl -s -H "Authorization: Bearer $GITHUB_TOKEN" \
           "https://api.github.com/repos/$GITHUB_REPOSITORY/actions/runners?per_page=100")
         echo "$response"
         if echo "$response" | grep -q '"status":"online"'; then
