--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -44,6 +44,7 @@ jobs:
       run: |
         response=$(curl -s -H "Authorization: Bearer $GITHUB_TOKEN" \
           "https://api.github.com/repos/$GITHUB_REPOSITORY/actions/runners?per_page=100")
+        echo response: $response
         if echo "$response" | grep -q '"status":"online"'; then
           echo "runner=self-hosted" >> $GITHUB_OUTPUT
         else
