--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -40,9 +40,9 @@ jobs:
     - name: Check if self-hosted runner is online
       id: check_runner
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        MY_PAT: ${{ secrets.MY_PAT }}
       run: |
-        response=$(curl -s -H "Authorization: Bearer $GITHUB_TOKEN" \
+        response=$(curl -s -H "Accept: application/vnd.github+json" -H "Authorization: Bearer $GITHUB_TOKEN" \
           "https://api.github.com/repos/$GITHUB_REPOSITORY/actions/runners?per_page=100")
         echo response: $response
         if echo "$response" | grep -q '"status":"online"'; then
