--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -42,7 +42,7 @@ jobs:
       env:
         MY_PAT: ${{ secrets.MY_PAT }}
       run: |
-        response=$(curl -s -H "Accept: application/vnd.github+json" -H "Authorization: Bearer $GITHUB_TOKEN" \
+        response=$(curl -s -H "Accept: application/vnd.github+json" -H "Authorization: Bearer $MY_PAT" \
           "https://api.github.com/repos/$GITHUB_REPOSITORY/actions/runners?per_page=100")
         echo response: $response
         if echo "$response" | grep -q '"status":"online"'; then
