--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -54,6 +54,7 @@ jobs:
     needs: select-runner
     name: Build OpenWRT on "${{ needs.select-runner.outputs.runner }}"
     runs-on: ${{ needs.select-runner.outputs.runner }}
+    timeout-minutes: 30
     strategy:
       fail-fast: false
     steps:
