--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -21,7 +21,7 @@ permissions:
   actions: read
 env:
   REPO_URL: https://github.com/TuvokYang/openwrt.git
-  REPO_BRANCH: main
+  REPO_BRANCH: openwrt-24.10
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: .config
   DIY_P1_SH: diy-part1.sh
