--- a/.config
+++ b/.config
@@ -7116,7 +7116,7 @@ CONFIG_PACKAGE_tc-tiny=y
 #
 # Ruijie
 #
-# CONFIG_PACKAGE_mentohust is not set
+CONFIG_PACKAGE_mentohust=y
 # end of Ruijie
 
 #
