add jlumbroso/free-disk-space@main to free disk space on github runner

--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -45,7 +45,7 @@ jobs:
       run: |
         response=$(curl -s -H "Accept: application/vnd.github+json" -H "Authorization: Bearer $RUNNER_ACCESS_TOKEN" \
           "https://api.github.com/repos/$GITHUB_REPOSITORY/actions/runners?per_page=100")
-        if echo "$response" | grep -q '"status": "online"'; then
+        if echo "$response" | grep -q '"status": "online"' && ! echo "$response" | grep -q '"busy": true'; then
           echo "runner=self-hosted" >> $GITHUB_OUTPUT
         else
           echo "runner=ubuntu-24.04" >> $GITHUB_OUTPUT
@@ -62,12 +62,25 @@ jobs:
     - name: Checkout
       uses: actions/checkout@main
 
+    - name: Free Disk Space
+      uses: jlumbroso/free-disk-space@main
+      if: ${{ needs.select-runner.outputs.runner }} != 'self-hosted'
+      with:
+        # this might remove tools that are actually needed,
+        # if set to "true" but frees about 6 GB
+        tool-cache: true
+        # all of these default to true, but feel free to set to
+        # "false" if necessary for your workflow
+        android: true
+        dotnet: true
+        haskell: true
+        large-packages: true
+        swap-storage: true
+
     - name: Initialization environment
       env:
         DEBIAN_FRONTEND: noninteractive
       run: |
-        sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /opt/hostedtoolcache/CodeQL
-        sudo docker image prune --all --force || echo "docker not exists"
         sudo -E apt-get -qq update
         chmod +x $GITHUB_WORKSPACE/$DIY_INSTALL_DEPS
         sudo $GITHUB_WORKSPACE/$DIY_INSTALL_DEPS
@@ -131,7 +144,7 @@ jobs:
       if: (!success())
       run: |
         du -h -d1 .
-        du -h -d0 /workdir/openwrt
+        du -h -d1 /workdir/openwrt
 
     - name: Upload bin directory
       uses: actions/upload-artifact@main
