--- a/.config
+++ b/.config
@@ -539,7 +539,7 @@ CONFIG_TARGET_INIT_SUPPRESS_STDERR=y
 CONFIG_VERSIONOPT=y
 CONFIG_VERSION_DIST="OpenWrt"
 CONFIG_VERSION_NUMBER="24.10.2"
-CONFIG_VERSION_CODE="openwrt-24.10"
+# CONFIG_VERSION_CODE is not set
 CONFIG_VERSION_REPO="https://downloads.openwrt.org/releases"
 CONFIG_VERSION_HOME_URL="https://www.cudy.com/zh-cn/products/tr3000-1-0"
 CONFIG_VERSION_MANUFACTURER="Cudy"
