--- a/.config
+++ b/.config
@@ -539,8 +539,8 @@ CONFIG_TARGET_INIT_SUPPRESS_STDERR=y
 CONFIG_VERSIONOPT=y
 CONFIG_VERSION_DIST="OpenWrt"
 CONFIG_VERSION_NUMBER="24.10.2"
-CONFIG_VERSION_CODE="openwrt-24.10"
-CONFIG_VERSION_REPO="https://downloads.openwrt.org/releases"
+# CONFIG_VERSION_CODE is not set
+CONFIG_VERSION_REPO="https://downloads.openwrt.org/releases/24.10.2"
 CONFIG_VERSION_HOME_URL="https://www.cudy.com/zh-cn/products/tr3000-1-0"
 CONFIG_VERSION_MANUFACTURER="Cudy"
 CONFIG_VERSION_MANUFACTURER_URL="https://www.cudy.com"
@@ -555,7 +555,6 @@ CONFIG_FEED_packages=y
 CONFIG_FEED_luci=y
 CONFIG_FEED_routing=y
 CONFIG_FEED_telephony=y
-CONFIG_FEED_custom=y
 
 #
 # Base system
@@ -5180,7 +5179,7 @@ CONFIG_PACKAGE_luci-app-frpc=y
 # CONFIG_PACKAGE_luci-app-hnet is not set
 CONFIG_PACKAGE_luci-app-https-dns-proxy=y
 # CONFIG_PACKAGE_luci-app-irqbalance is not set
-CONFIG_PACKAGE_luci-app-keepalived=y
+# CONFIG_PACKAGE_luci-app-keepalived is not set
 # CONFIG_PACKAGE_luci-app-ksmbd is not set
 CONFIG_PACKAGE_luci-app-ledtrig-rssi=y
 CONFIG_PACKAGE_luci-app-ledtrig-switch=y
@@ -6548,12 +6547,12 @@ CONFIG_PACKAGE_ddns-scripts-services=y
 # CONFIG_PACKAGE_ddns-scripts-utils is not set
 # CONFIG_PACKAGE_dhcp-forwarder is not set
 # CONFIG_PACKAGE_dhtd is not set
-# CONFIG_PACKAGE_dns-over-https is not set
+CONFIG_PACKAGE_dns-over-https=y
 # CONFIG_PACKAGE_dnscrypt-proxy is not set
 # CONFIG_PACKAGE_dnscrypt-proxy-resolvers is not set
 # CONFIG_PACKAGE_dnsdist is not set
 # CONFIG_PACKAGE_dnsdist-full is not set
-# CONFIG_PACKAGE_dnslookup is not set
+CONFIG_PACKAGE_dnslookup=y
 # CONFIG_PACKAGE_dnsproxy is not set
 # CONFIG_PACKAGE_drill is not set
 # CONFIG_PACKAGE_hostip is not set
